tests/verifier/pass/test15.ial
function void test_fwd()
{
    block entry
    {
        forward (asdf, fdsa);
    }
}
