tests/verifier/fail/test22.ial
function void test_fwd_cdecl() cdecl
{
    block entry
    {
        forward (a, b);
    }
}
